# rust-fil-proofs

./: .gitignore  Cargo.toml
fil-proofs-tooling/: Cargo.toml
filecoin-hashers/: Cargo.toml
filecoin-proofs/: Cargo.toml
storage-proofs-core/: Cargo.toml
storage-proofs-core/src/: nova.rs  settings.rs
storage-proofs-porep/: Cargo.toml
storage-proofs-porep/src/stacked/: mod.rs  nova.rs
storage-proofs-porep/src/stacked/vanilla/: challenges.rs  cores.rs
storage-proofs-post/: Cargo.toml
storage-proofs-update/: Cargo.toml
